resources/harald-website.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: harald-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: harald-website
  strategy:
    type: RollingUpdate
    rollingUpdate: { maxSurge: 1,  maxUnavailable: 0 }
  template:
    metadata:
      labels:
        app: harald-website
    spec:
      imagePullSecrets:
        - name: lab-registry
      containers:
        - name: harald-website
          imagePullPolicy: IfNotPresent
          image: registry.lab.lcarilla.de/harald-website
---
kind: Service
apiVersion: v1
metadata:
  name: harald-website
spec:
  selector:
    app: harald-website
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: harald-website
spec:
  tls:
    - hosts:
        - lcarilla.de
      secretName: harald-website-cert
  rules:
    - host: "lcarilla.de"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: harald-website
                port:
                  number: 80
