resources/rancher-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-ingress
  namespace: cattle-system
spec:
  rules:
    - host: "rancher.lab.lcarilla.de"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: rancher
                port:
                  number: 80
