resources/static-proxy-grafana.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-proxy-grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-proxy-grafana
  strategy:
    type: RollingUpdate
    rollingUpdate: { maxSurge: 1,  maxUnavailable: 0 }
  template:
    metadata:
      labels:
        app: static-proxy-grafana
    spec:
      imagePullSecrets:
        - name: lab-registry
      containers:
        - name: static-proxy-grafana
          imagePullPolicy: IfNotPresent
          image: registry.lab.lcarilla.de/static-proxy-grafana:0.0.1
---
kind: Service
apiVersion: v1
metadata:
  name: static-proxy-grafana
spec:
  selector:
    app: static-proxy-grafana
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: static-proxy-grafana
spec:
  tls:
    - hosts:
        - grafana.lab.lcarilla.de
      secretName: static-proxy-grafana-cert
  rules:
    - host: "grafana.lab.lcarilla.de"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: static-proxy-grafana
                port:
                  number: 80
